# video-engine-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  pyproject.toml
app/: config.py  dependencies.py  firebase.py  main.py  models.py  prompts.py
app/routers/: assets.py  projects.py  timeline.py
app/services/: projects.py  storage.py  tasks.py
