[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.0",
    "google-cloud-texttospeech>=2.33.0",
    "google-genai>=1.46.0",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
    "firebase-admin>=6.5.0",
    "google-cloud-firestore>=2.21.0",
]
